-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.0-rc
-
None
-
8139d43c294ef68460c6749a0d1aa5ad0ba37910
- Show debugger log
- Try to debug qtquick1\tests\auto\declarative\qdeclarativelanguage (dev) which currently crashes on Windows
- Note Creator becomes slow/locks up after stopping
- Note repeated messages "QML Debugger: No application output received in time, trying to connect ..."
| For Gerrit Dashboard: QTCREATORBUG-8931 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 53411,2 | Fix qml engine lockup when debugging an app run in terminal | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |