Fix qml engine lockup when debugging an app run in terminal

The default timeout for the timer is set to 0 for projects that have
the 'run in terminal' option checked in the run settings. Make sure
that this timeout is set to a reasonable number once the first connect
fails, before we retry.

Task-number: QTCREATORBUG-8931
Change-Id: Iaa8acb50d76f182ceda77f8e6923738ad79ff445
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Aurindam Jana <aurindam.jana@digia.com>